crates/bevy_reflect_compile_fail_tests/tests/reflect_remote/nested.fail.stderr
error[E0277]: the trait bound `TheirInner<T>: Reflect` is not satisfied
  --> tests/reflect_remote/nested.fail.rs:24:5
   |
24 |     #[reflect_remote(super::external_crate::TheirOuter<T>)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Reflect` is not implemented for `TheirInner<T>`
   |
   = help: the following other types implement trait `Reflect`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for the cast from `&TheirInner<T>` to `&dyn Reflect`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `TheirInner<T>: Reflect` is not satisfied
  --> tests/reflect_remote/nested.fail.rs:24:5
   |
24 |     #[reflect_remote(super::external_crate::TheirOuter<T>)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Reflect` is not implemented for `TheirInner<T>`
   |
   = help: the following other types implement trait `Reflect`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for the cast from `&mut TheirInner<T>` to `&mut (dyn Reflect + 'static)`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `TheirInner<T>: Reflect` is not satisfied
  --> tests/reflect_remote/nested.fail.rs:24:5
   |
   |                    - found this type parameter
   |
   = note: expected mutable reference `&mut TheirInner<bool>`
              found mutable reference `&mut TheirInner<T>`
note: associated function defined here
  --> /home/runner/work/bevy/bevy/crates/bevy_reflect/src/remote.rs:61:8
   |
61 |     fn as_wrapper_mut(remote: &mut Self::Remote) -> &mut Self;
   |        ^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: `?` operator has incompatible types
  --> tests/reflect_remote/nested.fail.rs:51:5
   |
51 |     #[reflect_remote(super::external_crate::TheirOuter<T>)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `TheirInner<T>`, found `TheirInner<bool>`
52 |     struct MyOuter<T: FromReflect + GetTypeRegistration> {
   |                    - expected this type parameter
   |
   = note: `?` operator cannot convert from `TheirInner<bool>` to `TheirInner<T>`
   = note: expected struct `TheirInner<T>`
              found struct `TheirInner<bool>`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/nested.fail.rs:55:20
   |
51 |     #[reflect_remote(super::external_crate::TheirOuter<T>)]
   |     -------------------------------------------------------
   |     |
   |     expected due to the type of this binding
   |     in this procedural macro expansion
52 |     struct MyOuter<T: FromReflect + GetTypeRegistration> {
   |                    - expected this type parameter
...
55 |         pub inner: super::external_crate::TheirInner<bool>,
   |                    ^^^^^ expected `TheirInner<T>`, found `TheirInner<bool>`
   |
   = note: expected struct `TheirInner<T>`
              found struct `TheirInner<bool>`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)
